--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/user-event": "^14.5.1",
+    "@vitest/coverage-v8": "^0.34.6",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
