--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,9 @@
-sonar.projectKey=
+onar.projectKey=
 sonar.organization=
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=
+sonar.projectName=202309-w9chwe-marta-ibarra
+
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
