Fix sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
-onar.projectKey=
-sonar.organization=
+sonar.projectKey=Marpro24_202309-w9chwe-marta-ibarra
+sonar.organization=marta-ibarra
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=202309-w9chwe-marta-ibarra
-
 sonar.projectVersion=1.0
+
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
@@ -12,6 +12,7 @@ sonar.sources=./src
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
+
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/main.tsx, src/setupTests.ts
+sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/main.tsx, src/setupTests.ts, src/styles/GlobalStyle.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
